<resources>
    <string name="welcome">Welcome</string>
    <string name="welcome_action">Show welcome screen at begin</string>
    <string name="app_name">Yam Niam</string>
    <string name="loading_indicator">Loading...</string>
    <string name="content_title">Reminder</string>
    <string name="content_text">Read and follow the daily instructions</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notify">Daily Reminder</string>
    <string name="notify_when">Hour for reminder</string>
    <string name="info">About</string>
    <string name="setting">settings</string>
    <string name="help">help</string>
    <string name="title_activity_welcome">FullscreenActivity</string>
    <string name="channel_name">Yam Niam</string>
    <string name="channel_description">Daily reminder to read the daily instruction</string>

</resources>